--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Styles/index.css"> <!-- CSS load -->
     <script src="./Scripts/index.js" type="module"></script> <!-- Script load -->
+    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"> <!-- Required Core Stylesheet for glidejs -->
+    <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script> <!-- Required Core JavaScript for glidejs -->
     <title>Infoscreen - 2</title>
 </head>
 <body>
@@ -37,7 +39,46 @@
                     </div>
 
                     <!-- gallery -->
-                    <div class="galleryJs">galleryJs</div>
+                    <div class="galleryJs">
+
+                        <div class="glide">
+                            <div class="glide__track" data-glide-el="track">
+                              <ul class="glide__slides">
+                                <li class="glide__slide">
+                                    <img src="./img/gabriel-alenius-USXfF_ONUGo-unsplash.jpg" style="height: 1011px;">
+                                </li>
+                                <li class="glide__slide">
+                                    <img src="./img/geran-de-klerk-uYkdJEYNwSM-unsplash.jpg" style="height: 1011px;">
+                                </li>
+                                <li class="glide__slide">
+                                    <img src="./img/gints-gailis-0WtHpNx7JvA-unsplash.jpg" alt="">
+                                </li>
+                                <li class="glide__slide">
+                                    <img src="./img/guillaume-briard-LXivx1ckeYY-unsplash.jpg" alt="">
+                                </li>
+                                <li class="glide__slide">
+                                    <img src="./img/jonas-jacobsson-kmwhg3N_B-4-unsplash.jpg" alt="">
+                                </li>
+                                <li class="glide__slide">
+                                    <img src="./img/miikka-a-jm1Gg8ETZUw-unsplash.jpg" alt="">
+                                </li>
+                                <li class="glide__slide">
+                                    <img src="./img/polina-kuzovkova-7wsO7r36geQ-unsplash.jpg" style="height: 1011px;">
+                                </li>
+                                <li class="glide__slide">
+                                    <img src="./img/polina-kuzovkova-zpdsVy0m_4I-unsplash.jpg" style="height: 1011px;">
+                                </li>
+                                <li class="glide__slide">
+                                    <img src="./img/stories-71DPL8YAx-8-unsplash.jpg" alt="">
+                                </li>
+                                <li class="glide__slide">
+                                    <img src="./img/stories-mom7DQIjtW4-unsplash.jpg" alt="">
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+
+                    </div>
 
                 </div>
 
