--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
             <div class="weatherApi">weatherApi</div>
             
             <!-- events container -->
-            <div class="eventsContainer">eventsContainer</div>
+            <div class="eventsContainer">
+
+                <!-- events content - from data.json-->
+                <div id="info-container"></div>
+
+            </div>
 
                 <!-- Side Container - Time / Gallery -->
                 <div class="asideGridContainer">
@@ -51,16 +56,16 @@
                                     <img src="./img/geran-de-klerk-uYkdJEYNwSM-unsplash.jpg" style="height: 1011px;">
                                 </li>
                                 <li class="glide__slide">
-                                    <img src="./img/gints-gailis-0WtHpNx7JvA-unsplash.jpg" alt="">
+                                    <img src="./img/gints-gailis-0WtHpNx7JvA-unsplash.jpg" style="height: 1011px;">
                                 </li>
                                 <li class="glide__slide">
-                                    <img src="./img/guillaume-briard-LXivx1ckeYY-unsplash.jpg" alt="">
+                                    <img src="./img/guillaume-briard-LXivx1ckeYY-unsplash.jpg" style="height: 1011px;">
                                 </li>
                                 <li class="glide__slide">
-                                    <img src="./img/jonas-jacobsson-kmwhg3N_B-4-unsplash.jpg" alt="">
+                                    <img src="./img/jonas-jacobsson-kmwhg3N_B-4-unsplash.jpg" style="height: 1011px;">
                                 </li>
                                 <li class="glide__slide">
-                                    <img src="./img/miikka-a-jm1Gg8ETZUw-unsplash.jpg" alt="">
+                                    <img src="./img/miikka-a-jm1Gg8ETZUw-unsplash.jpg" style="height: 1011px;">
                                 </li>
                                 <li class="glide__slide">
                                     <img src="./img/polina-kuzovkova-7wsO7r36geQ-unsplash.jpg" style="height: 1011px;">
@@ -69,10 +74,10 @@
                                     <img src="./img/polina-kuzovkova-zpdsVy0m_4I-unsplash.jpg" style="height: 1011px;">
                                 </li>
                                 <li class="glide__slide">
-                                    <img src="./img/stories-71DPL8YAx-8-unsplash.jpg" alt="">
+                                    <img src="./img/stories-71DPL8YAx-8-unsplash.jpg" style="height: 1011px;">
                                 </li>
                                 <li class="glide__slide">
-                                    <img src="./img/stories-mom7DQIjtW4-unsplash.jpg" alt="">
+                                    <img src="./img/stories-mom7DQIjtW4-unsplash.jpg" style="height: 1011px;">
                                 </li>
                               </ul>
                             </div>
