preparing for rss feed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <div class="gridContainer">
 
             <!-- news api container -->
-            <div class="newsApi">newsApi</div>
+            <div class="newsRss">
+                <div>
+                    Feed here
+                </div>
+            </div>
             
             <!-- weather api container -->
             <div class="weatherApi">
