Revert to working state

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <!-- news api container -->
             <div class="newsRss">
-                <div>
+                <div class="rssContainer">
                     Feed here
                 </div>
             </div>
@@ -32,7 +32,12 @@
             <div class="weatherApi">
 
                 <div><img src="./img/Weather Sun Icon.svg"></div>
+                
                 <hr>
+
+                <div>
+                    Weather API
+                </div>
 
             </div>
             
