newsfeed working somewhat

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 
             <!-- news api container -->
             <div class="newsRss">
-                <div class="rssContainer">
-                    Feed here
-                </div>
+                <div class="news-list"></div>
             </div>
             
             <!-- weather api container -->
