news feed styled 80% done. meetings done.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
         <!-- container contaning the entire grid -->
         <div class="gridContainer">
 
-            <!-- news api container -->
-            <div class="newsRss">
-                <div class="news-list"></div>
-            </div>
+             <!-- news api container -->
+             <div class="newsRss"></div> 
             
             <!-- weather api container -->
             <div class="weatherApi">
