--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 </div>
 
             </div>
+
+            <!-- NEW WEATHER CONTAINER -->
             
             <!-- events container -->
             <div class="eventsContainer">
